# gst-plugins-base

./: Makefile.am  RELEASE  configure.ac
docs/libs/: gst-plugins-base-libs-sections.txt
ext/alsa/: gstalsa.c  gstalsa.h  gstalsasink.c  gstalsasink.h  gstalsasrc.c
ext/cdparanoia/: gstcdparanoia.c  gstcdparanoiasrc.c
ext/gnomevfs/: gstgnomevfssrc.c
ext/libvisual/: visual.c
ext/ogg/: gstoggdemux.c  gstoggdemux.h  gstoggmux.c  gstoggstream.c  gstoggstream.h  gstogmparse.c
ext/pango/: gstbasetextoverlay.c  gsttextoverlay.c  gsttextoverlay.h
ext/theora/: gsttheoradec.c  gsttheoraenc.c  theoradec.c  theoraenc.c
ext/vorbis/: Makefile.am  gstvorbisdec.c  gstvorbisdeclib.h  gstvorbisenc.c  vorbis.c  vorbisdec.c  vorbisenc.c  vorbisfile.c
gst/adder/: gstadder.c
gst/audioconvert/: bufferframesconvert.c  gstaudioconvert.c  gstchannelmix.h
gst/audiorate/: gstaudiorate.c
gst/audioresample/: gstaudioresample.c
gst/audioscale/: gstaudioscale.c
gst/audiotestsrc/: gstaudiotestsrc.c
gst/encoding/: gstencodebin.c  gststreamcombiner.c
gst/ffmpegcolorspace/: avcodec.h  gstffmpegcodecmap.c  gstffmpegcolorspace.c  imgconvert.c
gst/playback/: NOTE  gstdecodebin.c  gstdecodebin2.c  gstplaybasebin.c  gstplaybin.c  gstplaybin2.c  gstplaysink.c  gstplaysink.h  gstplaysinkconvertbin.c  gststreaminfo.c  gststreamselector.c  gststreamsynchronizer.c  gstsubtitleoverlay.c  gsturidecodebin.c
gst/sine/: gstsinesrc.c  gstsinesrc.h
gst/videoscale/: Makefile.am  gstvideoscale.c  videoscale.c
po/: cs.po  fr.po  pt_BR.po  tr.po
tests/old/: Makefile.am
(+85 files in other folders)
